tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_6.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let map<A B>
  : | [A] | A => B => [B]
  = | [] _ => []
    | [head .._] f => [head.f]

do
  let result = [{foo: 2 bar: "hi"}].map(|.zap)
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_6.kk:7:43
  │
7 │   let result = [{foo: 2 bar: "hi"}].map(|.zap)
  │                                           ^^^ No such property or function
  │
  = Available properties:
      bar
      foo
